# s3-path-wrangler

./: README.md  pyproject.toml
.github/workflows/: main.yml  pull-requests.yml  release.yml  releases.yml
s3_path_wrangler/: paths.py
tests/: test_paths.py
