[tool.poetry]
name = "s3-path-wrangler"
version = "0.4.0"
description = "Provides S3 path manipulation, similar to PurePath in pathlib"
authors = ["Saulius Beinorius <saulius.beinorius@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
